added structure  and semantic

--- a/index.html
+++ b/index.html
@@ -1,13 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
-    
+    <header>
+        <h1>Badminton</h1>
+        <p>Un blog despre sportul meu preferat</p>
+        <nav>
+         <ul>
+            <li> <a href="https://www.sport.ro/">Acasa</a></li>
+            <li> <a href="#">Despre</a></li>
+            <li> <a href="#">Articole</a></li>
+            <li> <a href="#">Contacteaza</a></li>
+         </ul>
+        </nav>
+    </header>
+    <div>
+        <p>Badmintonul este un sport în care doi jucători sau două perechi de jucători joacă plasându-se fiecare de câte o
+          parte a unui fileu care împarte terenul dreptunghiular în două jumătăți egale.
+        </p>
+        <a href="https://www.sport.ro/" target="_blank">Incepe calatoria in lumea badminton-ului</a>
+    </div>
+    <main>
+        <section>
+            <h2>Despre acest site</h2>
+            <p>Acest site este un blogpost</p>
+        </section>
+
+        <section>
+            <h2>Bazele sportului</h2>
+
+            <article>
+                <header>
+                    <h3>Bazele Terenului</h3>
+                    <p>Scris de: Ciprian</p>
+                </header>
+                <p> Terenul de joc are mărimea de 13.40 m x 5.18 m la meciurile de simplu și de 13.40 m x 6.10 m la meciurile de
+                    dublu. Același teren este folosit și pentru meciurile de simplu și dublu, cu diferența că se trag niște linii
+                    despărțitoare vizibile.
+                </p>
+                 <a href="articolele/baze-teren.html">Cititi mai mult</a>
+                <footer> Publicat in anul x</footer>
+            </article>
+
+            <article>
+                <header>
+                    <h3>Jocul in sine</h3>
+                    <p>Scris de: Ciprian</p>
+                </header>
+                  <p>Un arbitru ajutat de un arbitru la serviciu și 6 arbitri de linie, supraveghează meciul. Înaintea începerii
+                    jocului se realizează tragerea la sorți. Sportivul care câștigă are trei optiuni de alegere: să servească, să
+                    primească serva sau terenul.
+                  </p>
+                  <a href="articolele/jocul-sine.html">Cititi mai mult</a>
+                  <footer>Publicat in anul y</footer>
+            </article>
+        </section>
+
+        <section>
+            <h2>Contacteaza</h2>
+            <p>Da-ne un email la example@gmail.com</p>
+        </section>
+    </main>
+    <aside>
+        <h3>Resurse top badminton</h3>
+        <ol>
+            <li><a href="#">Invata cum sa foloseti o racheta de badminton</a></li>
+            <li><a href="#">Descopera fizica flutrasului de badminton</a></li>
+            <li><a href="#">Cum poti folosi badmintonul ca o forma de recreatie</a></li>
+            <li><a href="#">Lista a concururilor competitive din zone diferite</a></li>
+        </ol>
+    </aside>
+    <footer>
+        <p>&copy; 2023 Joaca-te badminton, blogul</p>
+    </footer>
 </body>
+
 </html>
